--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,6 +87,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest]
+        target: [wasm32-unknown-unknown, wasm32-unknown-emscripten]
 
     runs-on: ${{ matrix.os }}
 
@@ -97,7 +98,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: wasm32-unknown-unknown
+          target: ${{ matrix.target }}
           override: true
 
       - name: Install node
